@@ -124,6 +124,45 @@ task issue3447Test(dependsOn: [assemble, compileTestJava], group: 'Verification'
     }
 }
 
+task constantPropagationTest(dependsOn: [assemble, compileTestJava], group: 'Verification') {
+    description 'Test the constant propagation analysis for dataflow framework.'
+    inputs.file('tests/constant-propagation/Expected.txt')
+    inputs.file('tests/constant-propagation/Test.java')
+
+    outputs.file('tests/constant-propagation/Out.txt')
+    outputs.file('tests/constant-propagation/Test.class')
+
+    delete('tests/constant-propagation/Out.txt')
+    delete('tests/constant-propagation/Test.class')
+    doLast {
+        javaexec {
+            workingDir = 'tests/constant-propagation'
+            if (!JavaVersion.current().java9Compatible) {
+                jvmArgs += "-Xbootclasspath/p:${configurations.javacJar.asPath}".toString()
+            }
+            else if (JavaVersion.current() > JavaVersion.VERSION_11) {
+                jvmArgs += [
+                        "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                        "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+                        "--add-opens", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+                        "--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+                        "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+                        "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+                        "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+                ]
+            }
+            classpath = sourceSets.test.runtimeClasspath
+            classpath += sourceSets.test.output
+            mainClass = 'constantpropagation.ConstantPropagation'
+        }
+        exec {
+            workingDir = 'tests/constant-propagation'
+            executable 'diff'
+            args = ['-u', 'Expected.txt', 'Out.txt']
+        }
+    }
+}
+
 apply from: rootProject.file("gradle-mvn-push.gradle")
 
 /** Adds information to the publication for uploading the dataflow artifacts to Maven repositories. */
